--- a/.github/workflows/Artifact-Example.yml
+++ b/.github/workflows/Artifact-Example.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Upload First
       uses: actions/upload-artifact@v2
       with:
-        name: an-artifact
+        name: an-artifact 😀
         path: content/file1.txt
         retention-days: 15
       env:
