--- a/.github/workflows/Artifact-Example.yml
+++ b/.github/workflows/Artifact-Example.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Upload all
       uses: actions/upload-artifact@v2
       with:
-        name: my-artifact
+        name: my-artifact 🐻
         path: content/file1.txt
         retention-days: 15
       env:
